@@ -35,9 +35,8 @@ import io.company.brewcraft.util.controller.AttributeFilter;
 import io.company.brewcraft.util.validator.Validator;
 
 @RestController
-@RequestMapping(path = "/api/v1/brews/stages", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "/api/v1/brews/stages")
 public class BrewStageController extends BaseController {
-
     private BrewStageService brewStageService;
 
     private BrewStageMapper brewStageMapper = BrewStageMapper.INSTANCE;
@@ -47,7 +46,7 @@ public class BrewStageController extends BaseController {
         this.brewStageService = brewStageService;
     }
 
-    @GetMapping(value = "", consumes = MediaType.ALL_VALUE)
+    @GetMapping(value = "", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public PageDto<BrewStageDto> getBrewStages(
             @RequestParam(required = false) Set<Long> ids,
             @RequestParam(required = false, name = "brew_ids") Set<Long> brewIds,
@@ -61,19 +60,18 @@ public class BrewStageController extends BaseController {
             @RequestParam(name = PROPNAME_ORDER_ASC, defaultValue = VALUE_DEFAULT_ORDER_ASC) boolean orderAscending,
             @RequestParam(name = PROPNAME_PAGE_INDEX, defaultValue = VALUE_DEFAULT_PAGE_INDEX) int page,
             @RequestParam(name = PROPNAME_PAGE_SIZE, defaultValue = VALUE_DEFAULT_PAGE_SIZE) int size) {
-
         Page<BrewStage> brewStagePage = brewStageService.getBrewStages(ids, brewIds, statusIds, taskIds, startedAtFrom, startedAtTo, endedAtFrom, endedAtTo, page, size, sort, orderAscending);
 
         List<BrewStageDto> brewStageList = brewStagePage.stream()
                                                         .map(brewStage -> brewStageMapper.toDto(brewStage))
-                                                        .collect(Collectors.toList());
+                                                        .toList();
 
         PageDto<BrewStageDto> dto = new PageDto<>(brewStageList, brewStagePage.getTotalPages(), brewStagePage.getTotalElements());
 
         return dto;
     }
 
-    @GetMapping(value = "/{stageId}", consumes = MediaType.ALL_VALUE)
+    @GetMapping(value = "/{stageId}", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public BrewStageDto getBrewStage(@PathVariable Long brewStageId) {
         BrewStage brewStage = brewStageService.getBrewStage(brewStageId);
 
@@ -82,21 +80,21 @@ public class BrewStageController extends BaseController {
         return brewStageMapper.toDto(brewStage);
     }
 
-    @PostMapping("")
+    @PostMapping(value = "", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.CREATED)
     public List<BrewStageDto> addBrewStages(@Valid @RequestBody List<AddBrewStageDto> addBrewStageDtos) {
         List<BrewStage> brewStages = addBrewStageDtos.stream()
                                                      .map(addBrewStageDto -> brewStageMapper.fromDto(addBrewStageDto))
-                                                     .collect(Collectors.toList());
+                                                     .toList();
 
         List<BrewStage> addedBrewStages = brewStageService.addBrewStages(brewStages);
 
         return addedBrewStages.stream()
                               .map(addedBrewStage -> brewStageMapper.toDto(addedBrewStage))
-                              .collect(Collectors.toList());
+                              .toList();
     }
 
-    @PutMapping("/{stageId}")
+    @PutMapping(value = "/{stageId}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public BrewStageDto putBrewStage(@Valid @RequestBody UpdateBrewStageDto updateBrewStageDto, @PathVariable Long stageId) {
         BrewStage brewStage = brewStageMapper.fromDto(updateBrewStageDto);
 
@@ -105,7 +103,7 @@ public class BrewStageController extends BaseController {
         return brewStageMapper.toDto(putBrewStage);
     }
 
-    @PatchMapping("/{stageId}")
+    @PatchMapping(value = "/{stageId}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public BrewStageDto patchBrewStage(@PathVariable Long stageId, @Valid @RequestBody UpdateBrewStageDto updateBrewStageDto) {
         BrewStage brewStage = brewStageMapper.fromDto(updateBrewStageDto);
 
