@@ -27,6 +27,7 @@ import io.company.brewcraft.dto.PageDto;
 import io.company.brewcraft.dto.ProductDto;
 import io.company.brewcraft.dto.UpdateProductDto;
 import io.company.brewcraft.model.Product;
+import io.company.brewcraft.service.ProductDtoDecorator;
 import io.company.brewcraft.service.ProductService;
 import io.company.brewcraft.service.exception.EntityNotFoundException;
 import io.company.brewcraft.service.mapper.ProductMapper;
@@ -34,19 +35,19 @@ import io.company.brewcraft.util.controller.AttributeFilter;
 import io.company.brewcraft.util.validator.Validator;
 
 @RestController
-@RequestMapping(path = "/api/v1/products", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "/api/v1/products")
 public class ProductController extends BaseController {
-
     private ProductService productService;
-
     private ProductMapper productMapper = ProductMapper.INSTANCE;
+    private ProductDtoDecorator decorator;
 
-    public ProductController(ProductService productService, AttributeFilter filter) {
+    public ProductController(ProductService productService, AttributeFilter filter, ProductDtoDecorator decorator) {
         super(filter);
         this.productService = productService;
+        this.decorator = decorator;
     }
 
-    @GetMapping(value = "", consumes = MediaType.ALL_VALUE)
+    @GetMapping(value = "", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public PageDto<ProductDto> getProducts(
         @RequestParam(required = false) Set<Long> ids,
         @RequestParam(required = false, name = "category_ids") Set<Long> categoryIds,
@@ -56,53 +57,66 @@ public class ProductController extends BaseController {
         @RequestParam(name = PROPNAME_PAGE_INDEX, defaultValue = VALUE_DEFAULT_PAGE_INDEX) int page,
         @RequestParam(name = PROPNAME_PAGE_SIZE, defaultValue = VALUE_DEFAULT_PAGE_SIZE) int size
     ) {
-
         Page<Product> productsPage = productService.getProducts(ids, categoryIds, categoryNames, page, size, sort, orderAscending);
 
         List<ProductDto> productsList = productsPage.stream()
                                                     .map(product -> productMapper.toDto(product))
-                                                    .collect(Collectors.toList());
+                                                    .toList();
 
+        this.decorator.decorate(productsList);
         PageDto<ProductDto> dto = new PageDto<ProductDto>(productsList, productsPage.getTotalPages(), productsPage.getTotalElements());
 
         return dto;
     }
 
-    @GetMapping(value = "/{productId}", consumes = MediaType.ALL_VALUE)
+    @GetMapping(value = "/{productId}", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ProductDto getProduct(@PathVariable Long productId) {
         Product product = productService.getProduct(productId);
 
         Validator.assertion(product != null, EntityNotFoundException.class, "Product", productId.toString());
 
-        return productMapper.toDto(product);
+        ProductDto dto = productMapper.toDto(product);
+
+        this.decorator.decorate(List.of(dto));
+
+        return dto;
     }
 
-    @PostMapping("")
+    @PostMapping(value = "", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.CREATED)
     public ProductDto addProduct(@Valid @RequestBody AddProductDto addProductDto) {
         Product product = productMapper.fromDto(addProductDto);
 
         Product addedProduct = productService.addProduct(product, addProductDto.getCategoryId());
 
-        return productMapper.toDto(addedProduct);
+        ProductDto dto = productMapper.toDto(addedProduct);
+        this.decorator.decorate(List.of(dto));
+
+        return dto;
     }
 
-    @PutMapping("/{productId}")
+    @PutMapping(value = "/{productId}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ProductDto putProduct(@Valid @RequestBody UpdateProductDto updateProductDto, @PathVariable Long productId) {
         Product product = productMapper.fromDto(updateProductDto);
 
         Product putProduct = productService.putProduct(productId, product, updateProductDto.getCategoryId());
 
-        return productMapper.toDto(putProduct);
+        ProductDto dto = productMapper.toDto(putProduct);
+        this.decorator.decorate(List.of(dto));
+
+        return dto;
     }
 
-    @PatchMapping("/{productId}")
+    @PatchMapping(value = "/{productId}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ProductDto patchProduct(@Valid @RequestBody UpdateProductDto updateProductDto, @PathVariable Long productId) {
         Product product = productMapper.fromDto(updateProductDto);
 
         Product patchedProduct = productService.patchProduct(productId, product, updateProductDto.getCategoryId());
 
-        return productMapper.toDto(patchedProduct);
+        ProductDto dto = productMapper.toDto(patchedProduct);
+        this.decorator.decorate(List.of(dto));
+
+        return dto;
     }
 
     @DeleteMapping(value = "/{productId}", consumes = MediaType.ALL_VALUE)
