@@ -33,9 +33,8 @@ import io.company.brewcraft.util.controller.AttributeFilter;
 import io.company.brewcraft.util.validator.Validator;
 
 @RestController
-@RequestMapping(path = "/api/v1/facilities", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "/api/v1/facilities")
 public class StorageController extends BaseController {
-
     private StorageService storageService;
 
     private StorageMapper storageMapper = StorageMapper.INSTANCE;
@@ -54,14 +53,14 @@ public class StorageController extends BaseController {
     ) {
         Page<Storage> storagePage = storageService.getAllStorages(page, size, sort, orderAscending);
 
-        List<StorageDto> storageList = storagePage.stream().map(storage -> storageMapper.toDto(storage)).collect(Collectors.toList());
+        List<StorageDto> storageList = storagePage.stream().map(storage -> storageMapper.toDto(storage)).toList();
 
         PageDto<StorageDto> dto = new PageDto<StorageDto>(storageList, storagePage.getTotalPages(), storagePage.getTotalElements());
 
         return dto;
     }
 
-    @GetMapping(value = "/storages/{storageId}", consumes = MediaType.ALL_VALUE)
+    @GetMapping(value = "/storages/{storageId}", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public StorageDto getStorage(@PathVariable Long storageId) {
         Storage storage = storageService.getStorage(storageId);
 
@@ -72,7 +71,7 @@ public class StorageController extends BaseController {
         return storageDto;
     }
 
-    @PostMapping("/{facilityId}/storages")
+    @PostMapping(value = "/{facilityId}/storages", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.CREATED)
     public StorageDto addStorage(@PathVariable Long facilityId, @Valid @RequestBody AddStorageDto storageDto) {
         Storage storage = storageMapper.fromDto(storageDto);
@@ -82,7 +81,7 @@ public class StorageController extends BaseController {
         return storageMapper.toDto(addedStorage);
     }
 
-    @PutMapping("/{facilityId}/storages/{storageId}")
+    @PutMapping(value = "/{facilityId}/storages/{storageId}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public StorageDto putStorage(@Valid @RequestBody UpdateStorageDto storageDto, @PathVariable Long facilityId, @PathVariable Long storageId) {
         Storage storage = storageMapper.fromDto(storageDto);
 
@@ -91,7 +90,7 @@ public class StorageController extends BaseController {
         return storageMapper.toDto(putStorage);
     }
 
-    @PatchMapping("/storages/{storageId}")
+    @PatchMapping(value = "/storages/{storageId}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public StorageDto patchStorage(@Valid @RequestBody UpdateStorageDto storageDto, @PathVariable Long storageId) {
         Storage storage = storageMapper.fromDto(storageDto);
 
