@@ -22,7 +22,7 @@ import io.company.brewcraft.service.mapper.user.UserSalutationMapper;
 import io.company.brewcraft.util.controller.AttributeFilter;
 
 @RestController
-@RequestMapping(path = "/api/v1/users/salutations", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "/api/v1/users/salutations")
 public class UserSalutationController extends BaseController {
     private static final Logger log = LoggerFactory.getLogger(UserSalutationController.class);
 
@@ -35,18 +35,17 @@ public class UserSalutationController extends BaseController {
         this.userSalutationService = userService;
     }
 
-    @GetMapping(value = "", consumes = MediaType.ALL_VALUE)
+    @GetMapping(value = "", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public PageDto<UserSalutationDto> getSalutations(@RequestParam(required = false) Set<Long> ids,
             @RequestParam(name = PROPNAME_SORT_BY, defaultValue = VALUE_DEFAULT_SORT_BY) SortedSet<String> sort,
             @RequestParam(name = PROPNAME_ORDER_ASC, defaultValue = VALUE_DEFAULT_ORDER_ASC) boolean orderAscending,
             @RequestParam(name = PROPNAME_PAGE_INDEX, defaultValue = VALUE_DEFAULT_PAGE_INDEX) int page,
             @RequestParam(name = PROPNAME_PAGE_SIZE, defaultValue = VALUE_DEFAULT_PAGE_SIZE) int size) {
-
         Page<UserSalutation> userSalutationPage = userSalutationService.getSalutations(ids, sort, orderAscending, page, size);
 
         List<UserSalutationDto> userSalutations = userSalutationPage.stream()
                                                                     .map(salutation -> userSalutationMapper.toDto(salutation))
-                                                                    .collect(Collectors.toList());
+                                                                    .toList();
 
         PageDto<UserSalutationDto> dto = new PageDto<UserSalutationDto>(userSalutations, userSalutationPage.getTotalPages(),
                 userSalutationPage.getTotalElements());
