@@ -5,6 +5,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
@@ -36,7 +37,7 @@ public class CollectionAccessorRefresher<I, A, V extends Identified<I>> {
             final Map<A, Set<I>> entityToCollectionEntitiesIds = new HashMap<>();
             final Set<I> allCollectionEntitiesIds = new HashSet<>();
 
-            accessors.stream().filter(accessor -> accessor != null).forEach(accessor -> {
+            accessors.stream().filter(Objects::nonNull).forEach(accessor -> {
                 Collection<V> collectionEntities = getter.apply(accessor);
 
                 if (collectionEntities != null && !collectionEntities.isEmpty()) {
@@ -49,7 +50,7 @@ public class CollectionAccessorRefresher<I, A, V extends Identified<I>> {
             final List<V> collectionEntities = entityRetriever.apply(allCollectionEntitiesIds);
 
             if (collectionEntities.size() != allCollectionEntitiesIds.size()) {
-                List<?> existingCollectionEntitiesIds = collectionEntities.stream().map(entity -> entity.getId()).collect(Collectors.toList());
+                List<?> existingCollectionEntitiesIds = collectionEntities.stream().map(entity -> entity.getId()).toList();
                 throw new EntityNotFoundException(String.format("Cannot find all %ss in Id-Set: %s. Only found the ones with Ids: %s", this.clazz.getSimpleName(), allCollectionEntitiesIds, existingCollectionEntitiesIds));
              }
 
@@ -59,7 +60,7 @@ public class CollectionAccessorRefresher<I, A, V extends Identified<I>> {
                 A entity = entry.getKey();
                 final Set<I> collectionIds = entry.getValue();
 
-                final Collection<V> refreshedCollectionEntities = collectionIds.stream().map(idToCollectionEntity::get).collect(Collectors.toList());
+                final Collection<V> refreshedCollectionEntities = collectionIds.stream().map(idToCollectionEntity::get).toList();
                 setter.accept(entity, refreshedCollectionEntities);
             }
         }
