@@ -40,7 +40,7 @@ public class SimpleUpdateService <ID, E extends CrudEntity<ID>, BE, UE extends U
             final E item = this.newEntity();
             item.override(addition, this.getPropertyNames(this.baseEntityCls, this.excludeProps));
             return item;
-         }).collect(Collectors.toList());
+         }).toList();
     }
 
     @Override
@@ -59,15 +59,15 @@ public class SimpleUpdateService <ID, E extends CrudEntity<ID>, BE, UE extends U
             Class<?> itemCls = this.baseEntityCls;
             if (update.getId() != null) {
                 final E existing = idToItemLookup.get(update.getId());
-                if (validator.rule(existing != null, "No existing %s found with Id: %s.", this.entityCls.getSimpleName(), update.getId())) {
+                if (existing != null) {
                     existing.optimisticLockCheck(update);
                     itemCls = this.updateEntityCls;
                 }
             }
             item.override(update, this.getPropertyNames(itemCls, this.excludeProps));
-            item.setId(update.getId()); // Note: During creation, this ID is ignored.
+            item.setId(update.getId()); // Note: During "creation" for JPA entities, this ID is ignored.
             return item;
-        }).collect(Collectors.toList());
+        }).toList();
 
         validator.raiseErrors();
         return targetItems;
@@ -93,7 +93,7 @@ public class SimpleUpdateService <ID, E extends CrudEntity<ID>, BE, UE extends U
                 }
                 item.setId(existing.getId());
                 return item;
-            }).collect(Collectors.toList());
+            }).toList();
         }
 
         idToItemLookup.forEach((id, patch) -> validator.rule(false, "Cannot apply the patch with Id: %s to an existing entity as it does not exist", id));
