@@ -3,8 +3,7 @@ package io.company.brewcraft.service.mapper;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.math.BigDecimal;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDateTime;
 import java.util.List;
 
@@ -24,7 +23,6 @@ import io.company.brewcraft.model.ProductCategory;
 import io.company.brewcraft.model.ProductMeasureValue;
 
 public class ProductMapperTest {
-
     private ProductMapper productMapper;
 
     @BeforeEach
@@ -34,10 +32,10 @@ public class ProductMapperTest {
 
     @Test
     public void testFromDto_ReturnsEntity() throws Exception {
-        ProductDto dto = new ProductDto(1L, "testProduct", "testDescription", new CategoryDto(1L), null, null, List.of(new ProductMeasureValueDto(1L, new MeasureDto(1L, "abv", 1), new BigDecimal("100"))), new URL("http://www.test.com"), 1);
+        ProductDto dto = new ProductDto(1L, "testProduct", "testDescription", new CategoryDto(1L), null, null, List.of(new ProductMeasureValueDto(1L, new MeasureDto(1L, "abv", 1), new BigDecimal("100"))), new URI("http://www.test.com"), 1);
         Product product = productMapper.fromDto(dto);
 
-        Product expectedProduct = new Product(1L, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(1L ,new Measure(1L, "abv", null, null, 1), new BigDecimal("100"), null)), new URL("http://www.test.com"), null, null, null, 1);
+        Product expectedProduct = new Product(1L, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(1L ,new Measure(1L, "abv", null, null, 1), new BigDecimal("100"), null)), new URI("http://www.test.com"), null, null, null, 1);
         expectedProduct.getTargetMeasures().get(0).setProduct(expectedProduct);
 
         assertEquals(expectedProduct, product);
@@ -45,10 +43,10 @@ public class ProductMapperTest {
 
     @Test
     public void testFromAddDto_ReturnsEntity() throws Exception {
-        AddProductDto dto = new AddProductDto("testProduct", "testDescription", 1L, List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100"))), new URL("http://www.test.com"));
+        AddProductDto dto = new AddProductDto("testProduct", "testDescription", 1L, List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100"))), new URI("http://www.test.com"));
         Product product = productMapper.fromDto(dto);
 
-        Product expectedProduct = new Product(null, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(null ,new Measure(1L), new BigDecimal("100"), null)), new URL("http://www.test.com"), null, null, null, null);
+        Product expectedProduct = new Product(null, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(null ,new Measure(1L), new BigDecimal("100"), null)), new URI("http://www.test.com"), null, null, null, null);
         expectedProduct.getTargetMeasures().get(0).setProduct(expectedProduct);
 
         assertEquals(expectedProduct, product);
@@ -56,10 +54,10 @@ public class ProductMapperTest {
 
     @Test
     public void testFromUpdateDto_ReturnsEntity() throws Exception {
-        UpdateProductDto dto = new UpdateProductDto("testProduct", "testDescription", 1L, List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100"))), new URL("http://www.test.com"), 1);
+        UpdateProductDto dto = new UpdateProductDto("testProduct", "testDescription", 1L, List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100"))), new URI("http://www.test.com"), 1);
         Product product = productMapper.fromDto(dto);
 
-        Product expectedProduct = new Product(null, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(null, new Measure(1L), new BigDecimal("100"), null)), new URL("http://www.test.com"), null, null, null, 1);
+        Product expectedProduct = new Product(null, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(null, new Measure(1L), new BigDecimal("100"), null)), new URI("http://www.test.com"), null, null, null, 1);
         expectedProduct.getTargetMeasures().get(0).setProduct(expectedProduct);
 
         assertEquals(expectedProduct, product);
@@ -67,10 +65,10 @@ public class ProductMapperTest {
 
     @Test
     public void testToDto_ReturnsDto() throws Exception {
-        Product product = new Product(1L, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(1L,new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product())), new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
+        Product product = new Product(1L, "testProduct", "testDescription", new ProductCategory(1L), List.of(new ProductMeasureValue(1L,new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product())), new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
         ProductDto dto = productMapper.toDto(product);
 
-        assertEquals(new ProductDto(1L, "testProduct", "testDescription", new CategoryDto(1L), null, null, List.of(new ProductMeasureValueDto(1L, new MeasureDto(1L, "abv", 1), new BigDecimal("100"))), new URL("http://www.test.com"), 1), dto);
+        assertEquals(new ProductDto(1L, "testProduct", "testDescription", new CategoryDto(1L), null, null, List.of(new ProductMeasureValueDto(1L, new MeasureDto(1L, "abv", 1), new BigDecimal("100"))), new URI("http://www.test.com"), 1), dto);
     }
 
     @Test
@@ -81,7 +79,7 @@ public class ProductMapperTest {
         ProductCategory subcategory1 = new ProductCategory(2L, "subcategory1", rootCategory, null, null, null, null);
         ProductCategory subcategory2 = new ProductCategory(3L, "subcategory2", subcategory1, null, null, null, null);
 
-        Product product = new Product(1L, "testProduct", "testDescription", subcategory2, List.of(new ProductMeasureValue(1L,new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product())), new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
+        Product product = new Product(1L, "testProduct", "testDescription", subcategory2, List.of(new ProductMeasureValue(1L,new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product())), new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
 
         productMapper.beforetoDto(productDto, product);
 
